deps/v8/test/message/no-legacy-const-3.out
*%(basename)s:8: SyntaxError: Unexpected token const
const
^^^^^

SyntaxError: Unexpected token const
